# middle-python-project-52

./: .flake8  .gitignore  Makefile  README.md  build.sh  main.py  pyproject.toml  ruff.toml  sonar-project.properties
.github/workflows/: ci.yml
labels/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
labels/migrations/: 0001_initial.py  0002_label_created_at.py
locale/ru/LC_MESSAGES/: django.mo  django.po
statuses/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
statuses/migrations/: 0001_initial.py
task_manager/: __init__.py  asgi.py  settings.py  urls.py  views.py  wsgi.py
tasks/: __init__.py  admin.py  apps.py  filters.py  forms.py  models.py  tests.py  urls.py  views.py
tasks/migrations/: 0001_initial.py  0002_alter_task_labels.py
templates/: base.html  home.html
templates/labels/: create.html  delete.html  list.html  update.html
templates/statuses/: create.html  delete.html  list.html  update.html
templates/tasks/: create.html  delete.html  detail.html  list.html  update.html
templates/users/: create.html  delete.html  list.html  login.html  update.html
users/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
