[project]
name = "hexlet-code"
version = "0.1.0"
description = "Task management system built with Django for tracking and organizing tasks with statuses, labels, and user assignments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.7",
    "django-bootstrap5>=26.2",
    "django-filter>=26.1",
    "gunicorn>=26.0.0",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "rollbar>=1.4.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
]
